syntax = "proto3";

package io.ontherocks.hellogrpc;

service Sum {
  // Calculates the sum of the two numbers provided in the request message.
  rpc CalcSum (SumRequest) returns (SumResponse) {}
}

message SumRequest {
  sint32 a = 1;
  sint32 b = 2;
}

message SumResponse {
  sint32 result = 1;
}